--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 	maven { url "https://maven.wispforest.io/releases" } 
+	maven { 
+    url = "https://maven.kyrptonaught.dev"
+	}
 }
 
 loom {
@@ -54,6 +57,8 @@ dependencies {
     // sentinel will warn them and give the option to download it automatically
     include "io.wispforest:owo-sentinel:${project.owo_version}"
 
+	modImplementation "net.kyrptonaught:customportalapi:${project.portal_version}"
+  	include "net.kyrptonaught:customportalapi:${project.portal_version}"
 }
 
 
