plains and water filter

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=0.2.ss03-14-2024
+mod_version=0.2.1
 maven_group=io.github.caleb67.moxplore
 archives_base_name=moxplore
 
@@ -21,3 +21,4 @@ owo_version=0.12.5+1.20.3
 
 # Portal API
 portal_version=0.0.1-beta64-1.20.4
+
